Bug 1313943 - Legacy event initializers should all do nothing during dispatch; r=bkelly

DOM's initEvent says that it must do nothing during dispatch.  UI Events
says they behave the same as initEvent, so the legacy initializers
defined there also shouldn't do anything during dispatch.  Previously we
only did this for initEvent itself, but other legacy initializers would
function normally during dispatch.

Edge passes the wpt test that's updated in this commit.  Chrome passes
all but initCustomEvent.  It would be nice to expand the test to have
coverage for all our legacy initializers, but the likelihood of
real-world compat issues from this behavior is slim enough that I didn't
think it was worth the effort.

MozReview-Commit-ID: IYLOuwlPGSj